priv/lib-src/_components.nav.scss
.c-main-nav {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 2rem;
    width: 100%;
    height: 40px;
    padding: 0 2.5%;
    margin-bottom: 2em;
    background: var(--flagRed);
    
    @supports (color: light-dark(black, white)) {
        background: light-dark(var(--theme), var(--lightTheme));
    }
    
    border-bottom: 3px solid var(--darkTheme);
    text-transform: uppercase;
    font-size: 0.9em;

    li {
        position: relative;
    }

    li:not(:last-child):after {
        content: '';
        width: 0.08em;
        height: 1em;
        height: 0.8lh;
        background: currentColor;
        position: absolute;
        right: -0.75em;
        top: 4px;
        top: 0.15lh;
    }

    @include breakpoint($mediumBreakpoint) {
        padding: 0 4rem;
    }
}

.c-main-nav__menu,
.c-main-nav__lang {
    @include striplist;
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 1.5em;
    height: 100%;
}

.c-main-nav__logo {
    margin-right: auto;
}

body.color--flagBlack,
body.color--flagBrown {
    .c-main-nav {
        color: white;
    }
}

.c-main-nav__btns {
    display: flex;
    gap: 1rem;
}

.c-main-nav__lang {
    gap: 1em;

    a {
        text-decoration: none;

        @include setInteractive {
            text-decoration: underline;
        }
    }

    a.is-active {
        text-decoration: underline;
    }

    li:not(:last-child):after {
        transform: rotate(10deg);
        right: -0.5em;
    }
}

@supports not (inset: 0) {
    // Supports query for checking if gap works
    .c-main-nav__menu {
        margin-right: 2rem;
    }

    .c-main-nav__menu li + li,
    .c-main-nav__lang li + li {
        margin-left: 1.5em;
    } 
}

